{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 86,
  "lineage": "0e0fc7b9-aafa-0fca-e0d7-09a195425621",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:937833747665:listener/app/front-end/a824860b6fdb6beb/668ab9d1d7357c32",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:937833747665:targetgroup/front-end/b3baca7d80eab33d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:937833747665:listener/app/front-end/a824860b6fdb6beb/668ab9d1d7357c32",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:937833747665:loadbalancer/app/front-end/a824860b6fdb6beb",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.front_end",
            "aws_lb_target_group.front_end",
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:937833747665:targetgroup/front-end/b3baca7d80eab33d-20230803233850540900000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:937833747665:targetgroup/front-end/b3baca7d80eab33d",
            "target_id": "i-0f51c4993044a1d75"
          },
          "dependencies": [
            "aws_instance.server1",
            "aws_key_pair.ssh_key",
            "aws_lb_target_group.front_end",
            "aws_security_group.server",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.local_file.public_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:937833747665:targetgroup/front-end/b3baca7d80eab33d-20230803233900671700000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:937833747665:targetgroup/front-end/b3baca7d80eab33d",
            "target_id": "i-01c2e1f12761cd7ee"
          },
          "dependencies": [
            "aws_instance.server2",
            "aws_key_pair.ssh_key",
            "aws_lb_target_group.front_end",
            "aws_security_group.server",
            "aws_subnet.public_c",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.local_file.public_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e9c37783aae6a27b",
            "arn": "arn:aws:ec2:ap-south-1:937833747665:instance/i-0f51c4993044a1d75",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f51c4993044a1d75",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "iaas-start",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b2316aa4b198ded2",
            "private_dns": "ip-10-0-0-54.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.54",
            "public_dns": "ec2-13-233-166-146.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.233.166.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03eff5ad8f03b359b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0403aec475dfeb2a4",
            "tags": {
              "Name": "server1"
            },
            "tags_all": {
              "Name": "server1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "server1"
            },
            "vpc_security_group_ids": [
              "sg-0cd6cb1435e3b6bf0"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "aws_security_group.server",
            "aws_subnet.public_a",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.local_file.public_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e9c37783aae6a27b",
            "arn": "arn:aws:ec2:ap-south-1:937833747665:instance/i-01c2e1f12761cd7ee",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01c2e1f12761cd7ee",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "iaas-start",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-093e19044b2e474f9",
            "private_dns": "ip-10-0-1-68.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.68",
            "public_dns": "ec2-15-206-195-138.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.195.138",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-062f778e5c2be19ca",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f46ebb0812777fe7",
            "tags": {
              "Name": "server2"
            },
            "tags_all": {
              "Name": "server2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "server2"
            },
            "vpc_security_group_ids": [
              "sg-0cd6cb1435e3b6bf0"
            ]
          },
          "dependencies": [
            "aws_key_pair.ssh_key",
            "aws_security_group.server",
            "aws_subnet.public_c",
            "aws_vpc.main",
            "data.aws_ami.ubuntu",
            "data.local_file.public_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:937833747665:internet-gateway/igw-02e809e1a8b955ff1",
            "id": "igw-02e809e1a8b955ff1",
            "owner_id": "937833747665",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-08edb45bb14a6d568"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:937833747665:loadbalancer/app/front-end/a824860b6fdb6beb",
            "arn_suffix": "app/front-end/a824860b6fdb6beb",
            "desync_mitigation_mode": "defensive",
            "dns_name": "front-end-2056588351.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:937833747665:loadbalancer/app/front-end/a824860b6fdb6beb",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "front-end",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03b6690f9634fa103"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0403aec475dfeb2a4"
              },
              {
                "subnet_id": "subnet-0f46ebb0812777fe7"
              }
            ],
            "subnets": [
              "subnet-0403aec475dfeb2a4",
              "subnet-0f46ebb0812777fe7"
            ],
            "vpc_id": "vpc-08edb45bb14a6d568",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_a",
            "aws_subnet.public_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:937833747665:targetgroup/front-end/b3baca7d80eab33d",
            "arn_suffix": "targetgroup/front-end/b3baca7d80eab33d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:937833747665:targetgroup/front-end/b3baca7d80eab33d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "front-end",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-08edb45bb14a6d568"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:937833747665:route-table/rtb-0c74ff3fdbadb8068",
            "id": "rtb-0c74ff3fdbadb8068",
            "owner_id": "937833747665",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02e809e1a8b955ff1",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-08edb45bb14a6d568"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a_rt_snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086ca0fff3f413361",
            "route_table_id": "rtb-0c74ff3fdbadb8068",
            "subnet_id": "subnet-0403aec475dfeb2a4"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_c_rt_snet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021b29b2c34bb5212",
            "route_table_id": "rtb-0c74ff3fdbadb8068",
            "subnet_id": "subnet-0f46ebb0812777fe7"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_c",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:937833747665:security-group/sg-03b6690f9634fa103",
            "description": "Allow inbound http traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b6690f9634fa103",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb",
            "name_prefix": "",
            "owner_id": "937833747665",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb"
            },
            "tags_all": {
              "Name": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-08edb45bb14a6d568"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:937833747665:security-group/sg-0cd6cb1435e3b6bf0",
            "description": "Allow ssh and http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd6cb1435e3b6bf0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "server",
            "name_prefix": "",
            "owner_id": "937833747665",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh_http"
            },
            "tags_all": {
              "Name": "allow_ssh_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-08edb45bb14a6d568"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:937833747665:subnet/subnet-0403aec475dfeb2a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0403aec475dfeb2a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "937833747665",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_a"
            },
            "tags_all": {
              "Name": "public_a"
            },
            "vpc_id": "vpc-08edb45bb14a6d568"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:937833747665:subnet/subnet-0f46ebb0812777fe7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f46ebb0812777fe7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "937833747665",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_c"
            },
            "tags_all": {
              "Name": "public_c"
            },
            "vpc_id": "vpc-08edb45bb14a6d568"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:937833747665:vpc/vpc-08edb45bb14a6d568",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-085898f23af4a9891",
            "default_route_table_id": "rtb-063deb928d7689f3a",
            "default_security_group_id": "sg-0da104b9d66636e17",
            "dhcp_options_id": "dopt-04b8e6bc284895063",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08edb45bb14a6d568",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-063deb928d7689f3a",
            "owner_id": "937833747665",
            "tags": {
              "Name": "main"
            },
            "tags_all": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}